@@ -21,9 +21,10 @@ import javafx.beans.InvalidationListener;
 import org.jackhuang.hmcl.download.*;
 import org.jackhuang.hmcl.task.DownloadException;
 import org.jackhuang.hmcl.task.FetchTask;
-import org.jackhuang.hmcl.ui.FXUtils;
+import org.jackhuang.hmcl.util.Lang;
 import org.jackhuang.hmcl.util.StringUtils;
 import org.jackhuang.hmcl.util.i18n.I18n;
+import org.jackhuang.hmcl.util.i18n.LocaleUtils;
 import org.jackhuang.hmcl.util.io.ResponseCodeException;
 
 import javax.net.ssl.SSLHandshakeException;
@@ -31,108 +32,88 @@ import java.io.FileNotFoundException;
 import java.net.SocketTimeoutException;
 import java.net.URI;
 import java.nio.file.AccessDeniedException;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.concurrent.CancellationException;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static org.jackhuang.hmcl.setting.ConfigHolder.config;
 import static org.jackhuang.hmcl.task.FetchTask.DEFAULT_CONCURRENCY;
-import static org.jackhuang.hmcl.util.Lang.mapOf;
 import static org.jackhuang.hmcl.util.Pair.pair;
 import static org.jackhuang.hmcl.util.i18n.I18n.i18n;
 
 public final class DownloadProviders {
-    private DownloadProviders() {}
+    private DownloadProviders() {
+    }
 
-    private static DownloadProvider currentDownloadProvider;
+    public static final String DEFAULT_AUTO_PROVIDER_ID = "balanced";
+    public static final String DEFAULT_DIRECT_PROVIDER_ID = "mojang";
 
-    public static final Map<String, DownloadProvider> providersById;
-    public static final Map<String, DownloadProvider> rawProviders;
-    private static final AdaptedDownloadProvider fileDownloadProvider = new AdaptedDownloadProvider();
+    private static final DownloadProviderWrapper PROVIDER_WRAPPER;
 
-    private static final MojangDownloadProvider MOJANG;
-    private static final BMCLAPIDownloadProvider BMCLAPI;
-
-    public static final String DEFAULT_PROVIDER_ID = "balanced";
-    public static final String DEFAULT_RAW_PROVIDER_ID = "bmclapi";
-
-    private static final InvalidationListener observer;
+    private static final DownloadProvider DEFAULT_PROVIDER;
+    public static final Map<String, DownloadProvider> DIRECT_PROVIDERS;
+    public static final Map<String, DownloadProvider> AUTO_PROVIDERS;
 
     static {
-        String bmclapiRoot = "https://bmclapi2.bangbang93.com";
-        String bmclapiRootOverride = System.getProperty("hmcl.bmclapi.override");
-        if (bmclapiRootOverride != null) bmclapiRoot = bmclapiRootOverride;
+        String bmclapiRoot = System.getProperty("hmcl.bmclapi.override", "https://bmclapi2.bangbang93.com");
+        BMCLAPIDownloadProvider bmclapiRaw = new BMCLAPIDownloadProvider(bmclapiRoot);
 
-        MOJANG = new MojangDownloadProvider();
-        BMCLAPI = new BMCLAPIDownloadProvider(bmclapiRoot);
-        rawProviders = mapOf(
-                pair("mojang", MOJANG),
-                pair("bmclapi", BMCLAPI)
+        DownloadProvider mojang = new MojangDownloadProvider();
+        DownloadProvider bmclapi = new AutoDownloadProvider(bmclapiRaw, mojang);
+
+        DEFAULT_PROVIDER = mojang;
+        DIRECT_PROVIDERS = Lang.mapOf(
+                pair("mojang", mojang),
+                pair("bmclapi", bmclapi)
         );
 
-        AdaptedDownloadProvider fileProvider = new AdaptedDownloadProvider();
-        fileProvider.setDownloadProviderCandidates(Arrays.asList(BMCLAPI, MOJANG));
-        BalancedDownloadProvider balanced = new BalancedDownloadProvider(MOJANG, BMCLAPI);
+        AUTO_PROVIDERS = Lang.mapOf(
+                pair("balanced", LocaleUtils.IS_CHINA_MAINLAND ? bmclapi : mojang),
+                pair("official", LocaleUtils.IS_CHINA_MAINLAND ? new AutoDownloadProvider(
+                        List.of(mojang, bmclapiRaw),
+                        List.of(bmclapiRaw, mojang)
+                ) : mojang),
+                pair("mirror", bmclapi)
+        );
 
-        providersById = mapOf(
-                pair("official", new AutoDownloadProvider(MOJANG, fileProvider)),
-                pair("balanced", new AutoDownloadProvider(balanced, fileProvider)),
-                pair("mirror", new AutoDownloadProvider(BMCLAPI, fileProvider)));
-
-        observer = FXUtils.observeWeak(() -> {
-            FetchTask.setDownloadExecutorConcurrency(
-                    config().getAutoDownloadThreads() ? DEFAULT_CONCURRENCY : config().getDownloadThreads());
-        }, config().autoDownloadThreadsProperty(), config().downloadThreadsProperty());
+        PROVIDER_WRAPPER = new DownloadProviderWrapper(DEFAULT_PROVIDER);
     }
 
     static void init() {
-        FXUtils.onChangeAndOperate(config().versionListSourceProperty(), versionListSource -> {
-            if (!providersById.containsKey(versionListSource)) {
-                config().setVersionListSource(DEFAULT_PROVIDER_ID);
-                return;
+        InvalidationListener onChangeDownloadThreads = observable -> {
+            FetchTask.setDownloadExecutorConcurrency(config().getAutoDownloadThreads()
+                    ? DEFAULT_CONCURRENCY
+                    : config().getDownloadThreads());
+        };
+        config().autoDownloadThreadsProperty().addListener(onChangeDownloadThreads);
+        config().downloadThreadsProperty().addListener(onChangeDownloadThreads);
+        onChangeDownloadThreads.invalidated(null);
+
+        InvalidationListener onChangeDownloadSource = observable -> {
+            if (config().isAutoChooseDownloadType()) {
+                String versionListSource = config().getVersionListSource();
+                DownloadProvider downloadProvider = versionListSource != null
+                        ? AUTO_PROVIDERS.getOrDefault(versionListSource, DEFAULT_PROVIDER)
+                        : DEFAULT_PROVIDER;
+                PROVIDER_WRAPPER.setProvider(downloadProvider);
+            } else {
+                String downloadType = config().getDownloadType();
+                PROVIDER_WRAPPER.setProvider(downloadType != null
+                        ? DIRECT_PROVIDERS.getOrDefault(downloadType, DEFAULT_PROVIDER)
+                        : DEFAULT_PROVIDER);
             }
-
-            currentDownloadProvider = Optional.ofNullable(providersById.get(versionListSource))
-                    .orElse(providersById.get(DEFAULT_PROVIDER_ID));
-        });
-
-        if (!rawProviders.containsKey(config().getDownloadType())) {
-            config().setDownloadType(DEFAULT_RAW_PROVIDER_ID);
-        }
-
-        FXUtils.onChangeAndOperate(config().downloadTypeProperty(), downloadType -> {
-            DownloadProvider primary = Optional.ofNullable(rawProviders.get(downloadType))
-                    .orElse(rawProviders.get(DEFAULT_RAW_PROVIDER_ID));
-            fileDownloadProvider.setDownloadProviderCandidates(
-                    Stream.concat(
-                            Stream.of(primary),
-                            rawProviders.values().stream().filter(x -> x != primary)
-                    ).collect(Collectors.toList())
-            );
-        });
-    }
-
-    public static String getPrimaryDownloadProviderId() {
-        String downloadType = config().getDownloadType();
-        if (providersById.containsKey(downloadType))
-            return downloadType;
-        else
-            return DEFAULT_PROVIDER_ID;
-    }
-
-    public static DownloadProvider getDownloadProviderByPrimaryId(String primaryId) {
-        return Optional.ofNullable(providersById.get(primaryId))
-                .orElse(providersById.get(DEFAULT_PROVIDER_ID));
+        };
+        config().versionListSourceProperty().addListener(onChangeDownloadSource);
+        config().autoChooseDownloadTypeProperty().addListener(onChangeDownloadSource);
+        config().downloadTypeProperty().addListener(onChangeDownloadSource);
+        onChangeDownloadSource.invalidated(null);
     }
 
     /**
      * Get current primary preferred download provider
      */
     public static DownloadProvider getDownloadProvider() {
-        return config().isAutoChooseDownloadType() ? currentDownloadProvider : fileDownloadProvider;
+        return PROVIDER_WRAPPER;
     }
 
     public static String localizeErrorMessage(Throwable exception) {
@@ -153,7 +134,10 @@ public final class DownloadProviders {
                 return i18n("install.failed.downloading.detail", uri) + "\n" + i18n("exception.access_denied", ((AccessDeniedException) exception.getCause()).getFile());
             } else if (exception.getCause() instanceof ArtifactMalformedException) {
                 return i18n("install.failed.downloading.detail", uri) + "\n" + i18n("exception.artifact_malformed");
-            } else if (exception.getCause() instanceof SSLHandshakeException) {
+            } else if (exception.getCause() instanceof SSLHandshakeException && !(exception.getCause().getMessage() != null && exception.getCause().getMessage().contains("Remote host terminated"))) {
+                if (exception.getCause().getMessage() != null && (exception.getCause().getMessage().contains("No name matching") || exception.getCause().getMessage().contains("No subject alternative DNS name matching"))) {
+                    return i18n("install.failed.downloading.detail", uri) + "\n" + i18n("exception.dns.pollution");
+                }
                 return i18n("install.failed.downloading.detail", uri) + "\n" + i18n("exception.ssl_handshake");
             } else {
                 return i18n("install.failed.downloading.detail", uri) + "\n" + StringUtils.getStackTrace(exception.getCause());
